--- a/main.css
+++ b/main.css
@@ -1,6 +1,14 @@
 #main {
     width: 100px;
+    height: 100px;
     background: green;
     border-radius: 50%;
+    margin: 50px;
+}
+
+#second {
+    width: 100px;
+    height: 100px;
+    background: red;
     margin: 50px;
 }
