--- a/main.css
+++ b/main.css
@@ -12,3 +12,11 @@
     background: red;
     margin: 50px;
 }
+
+#third {
+    width: 100px;
+    height: 100px;
+    background: orange;
+    border-radius: 35%;
+    margin: 50px;
+}
