--- a/main.css
+++ b/main.css
@@ -20,3 +20,10 @@
     border-radius: 35%;
     margin: 50px;
 }
+
+#blue {
+    width: 100px;
+    height: 100px;
+    background: blue;
+    margin: 50px
+}
