--- a/main.css
+++ b/main.css
@@ -20,3 +20,11 @@
     border-radius: 35%;
     margin: 50px;
 }
+
+#pink {
+    width: 100px;
+    height: 100px;
+    background: deeppink;
+    border-radius: 50%;
+    margin: 50px;
+}
