added black block

--- a/main.css
+++ b/main.css
@@ -35,3 +35,11 @@
     border-radius: 50%;
     margin: 50px;
 }
+
+#block {
+    width: 100px;
+    height: 100px;
+    background: black;
+    border-radius: 35%;
+    margin: 50px;
+}
